--- a/rps.ipynb
+++ b/rps.ipynb
@@ -5,14 +5,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Yash Deshpande C003 B1"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Installing Necessary Dependencies "
    ]
   },
@@ -151,102 +143,131 @@
    "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(0)  # Get the first posible webcam\n",
-    "cap.set(3, 720) # Changing width of video input\n",
-    "cap.set(4, 480) # Changing height of video input\n",
+    "cap.set(3, 720)  # Changing width of video input\n",
+    "cap.set(4, 480)  # Changing height of video input\n",
     "\n",
     "\n",
-    "while cap.isOpened(): # Running The Loop when video is loaded properly\n",
-    "    bg=cv2.imread(\"Rock Paper Scissors.png\") # Opencv reading the background \n",
+    "while cap.isOpened():  # Running The Loop when video is loaded properly\n",
     "    \n",
-    "    cv2.putText(bg,\"Enter s to play\", (300, 1000), cv2.FONT_HERSHEY_SIMPLEX,2, (235, 111, 146),4)            \n",
-    "    cv2.putText(bg,\"Enter q to stop\", (1200, 1000), cv2.FONT_HERSHEY_SIMPLEX,2, (235, 111, 146),4)            \n",
-    "    cv2.putText(bg,f\"{score[0],score[1]}\", (900, 870) , cv2.FONT_HERSHEY_SIMPLEX,2, (235, 111, 146),4)            \n",
-    "    if ai: # This is for displaying images of rps when its a draw or when ai wins\n",
-    "        comp=cv2.imread(f\"{randomnum}.png\")\n",
-    "        width,height,k= comp.shape # Getting the tuple of rows, columns, and channels and unpacking them\n",
-    "        bg[500:width+500,300:height+300]=comp # Superimposing the respective image in the background by replacing the background matrix with that of that image of rps\n",
+    "    bg = cv2.imread(\"Rock Paper Scissor.png\")  # Opencv reading the background\n",
+    "    cv2.putText(bg, \"Enter s to play\", (300, 1000),\n",
+    "                cv2.FONT_HERSHEY_SIMPLEX, 2, (235, 111, 146), 4)\n",
+    "    cv2.putText(bg, \"Enter q to stop\", (1200, 1000),\n",
+    "                cv2.FONT_HERSHEY_SIMPLEX, 2, (235, 111, 146), 4)\n",
+    "    cv2.putText(bg, f\"{score[0],score[1]}\", (900, 870),\n",
+    "                cv2.FONT_HERSHEY_SIMPLEX, 2, (235, 111, 146), 4)\n",
     "\n",
-    "    ret,frame=cap.read()\n",
+    "    if ai:  # This is for displaying images of rps when its a draw or when ai wins\n",
     "\n",
+    "        comp = cv2.imread(f\"{randomnum}.png\")\n",
+    "\n",
+    "        # Getting the tuple of rows, columns, and channels and unpacking them\n",
+    "        width, height, k = comp.shape\n",
+    "\n",
+    "        # Superimposing the respective image in the background by replacing the background matrix with that of that image of rps\n",
+    "        bg[500:width+500, 300:height+300] = comp\n",
+    "\n",
+    "    succesfull, frame = cap.read()\n",
     "    '''\n",
     "    Reading the video input.\n",
-    "    ret is  a boolean variable that returns true if the frame is available\n",
+    "    succesfull is a boolean variable that returns true if the frame is available\n",
     "    frame is an image array vector captured based on the default frames per second defined explicitly or implicitly\n",
     "    '''\n",
     "\n",
-    "    # if frame is read correctly ret is True# First step is to initialize the Hands class an store it in a variable\n",
-    "    if not ret:\n",
+    "    # if frame is read correctly succesfull is True# First step is to initialize the Hands class an store it in a variable\n",
+    "    if not succesfull:\n",
     "        print(\"Can't receive frame, terminating now ...\")\n",
     "        break\n",
-    "   \n",
+    "\n",
     "    frame = cv2.flip(frame, 1)  # For mirroring the video\n",
     "\n",
     "    # opecv reads and interprets images in brg format (due to historic reasons) but mediapipe needs rgb so we convert it\n",
     "    results = hands.process(cv2.cvtColor(frame, cv2.COLOR_BGR2RGB))\n",
-    "    \n",
-    "    if results.multi_hand_landmarks: # This a list of x,y,z coordinates of each landmark of the hand in the video input\n",
+    "\n",
+    "    if results.multi_hand_landmarks:  # This a list of x,y,z coordinates of each landmark of the hand in the video input\n",
     "        hand_landmarks = results.multi_hand_landmarks[0]\n",
-    "        mp_drawing.draw_landmarks(frame, hand_landmarks, mp_hands.HAND_CONNECTIONS, \n",
-    "                                    mp_drawing.DrawingSpec(color=(121, 22, 76), thickness=2, circle_radius=4),\n",
-    "                                    mp_drawing.DrawingSpec(color=(250, 44, 250), thickness=2, circle_radius=2),\n",
-    "                                        ) # Drawing Landmarks on Hand\n",
-    "        for point in mp_hands.HandLandmark: # This is for getting y coordinates of TIPs and PIPs of each finger \n",
-    "            indextip=hand_landmarks.landmark[point.INDEX_FINGER_TIP].y \n",
-    "            middletip=hand_landmarks.landmark[point.MIDDLE_FINGER_TIP].y \n",
-    "            ringtip=hand_landmarks.landmark[point.RING_FINGER_TIP].y \n",
-    "            pinkytip=hand_landmarks.landmark[point.PINKY_TIP].y \n",
+    "        mp_drawing.draw_landmarks(frame, hand_landmarks, mp_hands.HAND_CONNECTIONS,\n",
+    "                                  mp_drawing.DrawingSpec(\n",
+    "                                      color=(121, 22, 76), thickness=2, circle_radius=4),\n",
+    "                                  mp_drawing.DrawingSpec(\n",
+    "                                      color=(250, 44, 250), thickness=2, circle_radius=2),\n",
+    "                                  )  # Drawing Landmarks on Hand\n",
+    "        for point in mp_hands.HandLandmark:  # This is for getting y coordinates of TIPs and PIPs of each finger\n",
+    "            indextip = hand_landmarks.landmark[point.INDEX_FINGER_TIP].y\n",
+    "            middletip = hand_landmarks.landmark[point.MIDDLE_FINGER_TIP].y\n",
+    "            ringtip = hand_landmarks.landmark[point.RING_FINGER_TIP].y\n",
+    "            pinkytip = hand_landmarks.landmark[point.PINKY_TIP].y\n",
     "\n",
-    "            indexpip=hand_landmarks.landmark[point.INDEX_FINGER_PIP].y \n",
-    "            middlepip=hand_landmarks.landmark[point.MIDDLE_FINGER_PIP].y \n",
-    "            ringpip=hand_landmarks.landmark[point.RING_FINGER_PIP].y \n",
-    "            pinkypip=hand_landmarks.landmark[point.PINKY_PIP].y \n",
+    "            indexpip = hand_landmarks.landmark[point.INDEX_FINGER_PIP].y\n",
+    "            middlepip = hand_landmarks.landmark[point.MIDDLE_FINGER_PIP].y\n",
+    "            ringpip = hand_landmarks.landmark[point.RING_FINGER_PIP].y\n",
+    "            pinkypip = hand_landmarks.landmark[point.PINKY_PIP].y\n",
     "\n",
-    "            #When index and ring fingers tips are above the pips it is scissors\n",
-    "            if middletip<middlepip and indextip<indexpip and ringtip>ringpip and pinkytip>pinkypip:\n",
-    "                user=3 #Scissors\n",
+    "            # When index and ring fingers tips are above the pips it is scissors\n",
+    "            if middletip < middlepip and indextip < indexpip and ringtip > ringpip and pinkytip > pinkypip:\n",
+    "                user = 3  # Scissors\n",
+    "\n",
     "            # When all the tips are bellow the pips\n",
-    "            elif middletip>middlepip and indextip>indexpip and ringtip>ringpip and pinkytip>pinkypip:\n",
-    "                user=1 # Rock\n",
-    "            # When all the tips are above the pips\n",
-    "            elif middletip<middlepip and indextip<indexpip and ringtip<ringpip and pinkytip<pinkypip:\n",
-    "                user=2 # Paper\n",
-    "            else:\n",
-    "                user=0\n",
-    "    \n",
-    "    if startofgame: # Starting the game only when user says so\n",
-    "        cv2.putText(bg,str(round((time.time() - startoftime))), (900, 700), cv2.FONT_HERSHEY_SIMPLEX,3, (235, 111, 146),4) #Displaying The Score         \n",
-    "        randomnum=random.randint(1,3) # Computers Choice\n",
-    "        ai=False # To remove the rps image for a new fresh game\n",
-    "        text=\"\" # Removing the text on display after each game\n",
+    "            elif middletip > middlepip and indextip > indexpip and ringtip > ringpip and pinkytip > pinkypip:\n",
+    "                user = 1  # Rock\n",
     "\n",
-    "        if (time.time() - startoftime) >= 3 :\n",
+    "            # When all the tips are above the pips\n",
+    "            elif middletip < middlepip and indextip < indexpip and ringtip < ringpip and pinkytip < pinkypip:\n",
+    "                user = 2  # Paper\n",
+    "\n",
+    "            else:\n",
+    "                user = 0\n",
+    "            ''' \n",
+    "            Heights origin starts from top left ie 0 on top as as you go down it increases\n",
+    "            Similarly Width starts from top left and increases as you go right\n",
+    "             '''\n",
+    "\n",
+    "    if startofgame:  # Starting the game only when user says so\n",
+    "        cv2.putText(bg, str(round((time.time() - startoftime))), (900, 700),\n",
+    "                    cv2.FONT_HERSHEY_SIMPLEX, 3, (235, 111, 146), 4)  # Displaying The Score\n",
+    "        randomnum = random.randint(1, 3)  # Computers Choice\n",
+    "        ai = False  # To remove the rps image for a new fresh game\n",
+    "        text = \"\"  # Removing the text on display after each game\n",
+    "\n",
+    "        if (time.time() - startoftime) >= 3:\n",
     "            if (user == 1 and randomnum == 3) or (user == 2 and randomnum == 1) or (user == 3 and randomnum == 2):\n",
-    "                score[1]+=1\n",
-    "                text=\"You Win!\"\n",
-    "                ai=True\n",
+    "                score[1] += 1\n",
+    "                text = \"You Win!\"\n",
+    "                ai = True\n",
     "            elif (user == 3 and randomnum == 1) or (user == 1 and randomnum == 2) or (user == 2 and randomnum == 3):\n",
     "                score[0] += 1\n",
-    "                text=\"PC Wins!\"\n",
-    "                ai=True\n",
+    "                text = \"PC Wins!\"\n",
+    "                ai = True\n",
     "            elif (user == 1 and randomnum == 1) or (user == 2 and randomnum == 2) or (user == 3 and randomnum == 3):\n",
-    "                text=\"Draw!\"\n",
-    "                ai=True\n",
-    "            startofgame=False\n",
+    "                text = \"Draw!\"\n",
+    "                ai = True\n",
+    "            startofgame = False\n",
     "\n",
-    "    cv2.putText(bg,text, (800, 600), cv2.FONT_HERSHEY_SIMPLEX,3, (235, 111, 146),4) # Puts anything in the text variable on display           \n",
-    "    cv2.imshow(\"Background\",bg) # Displaying the background\n",
-    "    cv2.imshow('Player', frame)  # Displaying the video\n",
+    "    # Puts anything in the text variable on display\n",
+    "    cv2.putText(bg, text, (800, 600), cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "                3, (235, 111, 146), 4)\n",
     "\n",
-    "    key=cv2.waitKey(10) # Waiting for 0.01 seconds for user to start the game or exit the game\n",
-    "    if key == ord('s'): # Starting the game\n",
-    "        startoftime=time.time() # Getting current secconds from the unix epoch January 1, 1970 in seconds\n",
-    "        startofgame=True\n",
-    "    if key == ord ('r'):\n",
-    "        score=[0,0   ]\n",
+    "    frame = cv2.resize(frame, (0, 0), None, 0.8, 0.8)\n",
+    "    w, h, k = frame.shape\n",
+    "\n",
+    "    # replacing the pixels of the background for that particular rows and cols with the frame's pixels\n",
+    "    bg[400:w+400, 1200:h+1200] = frame\n",
+    "\n",
+    "    cv2.imshow(\"Game Frame\", bg)  # Displaying the background\n",
+    "\n",
+    "    # Waiting for 0.01 seconds for user to start or exit the game or resest the score\n",
+    "    key = cv2.waitKey(10)\n",
     "    \n",
+    "    if key == ord('s'):  # Starting the game\n",
+    "        # Getting current secconds from the unix epoch January 1, 1970 in seconds\n",
+    "        startoftime = time.time()\n",
+    "        startofgame = True\n",
+    "    if key == ord('r'):\n",
+    "        score = [0, 0]\n",
+    "\n",
     "    if key == ord('q'):  # quitting when user enters q to quit the program\n",
     "        break\n",
-    "        \n",
+    "\n",
     "else:\n",
     "    print(\"Video Not Opened,Exiting\")\n"
    ]
@@ -257,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cap.release()\n",
+    "cap.release() #Once it exits the loop,\n",
     "cv2.destroyAllWindows()"
    ]
   }
